[package]
name = "bdk_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.2.5", features = ["derive", "env"] }
bdk_core = { path = "../bdk_core", features = ["serde"]}
bdk_keychain = { path = "../bdk_keychain" }
bdk_file_store = { path = "../bdk_file_store"}
anyhow = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.37"
serde_json = { version = "^1.0" }
log = "^0.4"
env_logger = "0.7"
