[package]
name = "bdk_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# BDK Core
bdk_chain = { path = "../bdk_chain", features = ["serde", "miniscript", "file_store"]}
bdk_tmp_plan = { path = "../bdk_tmp_plan" }
bdk_coin_select = { path = "../bdk_coin_select" }
# Auxiliaries
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.37"
serde_json = { version = "^1.0" }
log = "^0.4"
env_logger = "0.7"
