[package]
name = "bdk_coin_selection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.29" }
serde_crate = { package = "serde", version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
proptest = "1"

[features]
default = ["std"]
std = []
serde = ["serde_crate", "bitcoin/serde"]
