[package]
name = "bdk_coin_selection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.29" }


[dev-dependencies]
rand = "0.8"
proptest = "1"

[features]
default = ["std"]
std = []
