[package]
name = "bdk_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.29" }
miniscript = { git =  "https://github.com/llfourn/rust-miniscript", rev = "33ccdd6172110adf7d5ec411cca50d88543f17f7" }
# miniscript = { path = "../../rust-miniscript" }
serde_crate = { package = "serde", version = "1", optional = true, features = ["derive"] }
# Use hashbrown as a feature flag to have HashSet and HashMap from it.
hashbrown = { version = "0.12.1" , optional = true }

[features]
default = ["std"]
std = []
serde = ["serde_crate", "miniscript/serde", "bitcoin/serde"]

# [patch.crates-io]
# miniscript = { git =  "https://github.com/llfourn/rust-miniscript", rev = "2d351c08caca292e8710d74b950bc200f5a539cc" }
