[package]
name = "bdk_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.29" }
serde_crate = { package = "serde", version = "1", optional = true, features = ["derive"] }
# Use hashbrown as a feature flag to have HashSet and HashMap from it.
hashbrown = { version = "0.12.1" , optional = true }
miniscript = { version = "9.0.0", optional = true  }

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["std"]
std = []
serde = ["serde_crate", "bitcoin/serde"]
