[package]
name = "bdk_core_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.2.5", features = ["derive", "env"] }
bdk_core = { path = "../bdk_core"  }
bdk_coin_selection = { path = "../bdk_coin_selection" }
anyhow = "1"
bdk_esplora = { path = "../bdk_esplora" }
