[package]
name = "bdk_core_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.2.5", features = ["derive", "env"] }
bdk_core = { path = "../bdk_core", features = ["miniscript", "serde"]  }
anyhow = "1"
bdk_esplora = { path = "../bdk_esplora" }
bincode = {  version = "2.0.0-rc.2", features = ["serde"] }
