[package]
name = "bdk_core_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.2.5", features = ["derive", "env"] }
bdk_keychain = { path = "../bdk_keychain", features = ["serde"] }
bdk_file_store = { path = "../bdk_file_store" }
bdk_esplora = { path = "../bdk_esplora" }
anyhow = "1"
serde = "1"
