[package]
name = "bdk_electrum"
version = "0.1.0"
edition = "2021"
description = "BDK Electrum client library for updating the keychain tracker."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_chain = { path = "../bdk_chain", features = ["serde", "miniscript"] }
electrum-client = { version = "0.12" }
serde_json = { version = "1.0" }
