[package]
name = "bdk_electrum"
version = "0.1.0"
edition = "2021"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/LLFourn/bdk_core_staging"
documentation = "https://docs.rs/bdk_electrum"
description = "BDK Electrum client library for updating the keychain tracker."
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_chain = { path = "../bdk_chain", features = ["serde", "miniscript"] }
electrum-client = { version = "0.12" }
serde_json = { version = "1.0" }
electrsd = { version = "0.22", features = ["electrs_0_8_10", "bitcoind_22_0"], optional = true }

[features]
example_utils = ["electrsd"]
