[package]
name = "bdk_electrum_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# BDK Core
bdk_core = { path = "../bdk_core", features = ["serde"] }
bdk_cli = { path = "../bdk_cli_lib"}
bdk_keychain = { path = "../bdk_keychain" }

# Electrum
electrum-client = { version = "0.12" }

# Auxiliary
log = "0.4"
env_logger = "0.7"