[package]
name = "bdk_esplora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2", features = ["json"] }
bdk_core = { path = "../bdk_core", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
