[package]
name = "bdk_esplora"
version = "0.1.0"
edition = "2021"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/LLFourn/bdk_core_staging"
documentation = "https://docs.rs/bdk_esplora"
description = "BDK Electrum client library for updating the keychain tracker."
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_chain = { version = "0.2", features = ["serde", "miniscript"] }
esplora-client = { version = "0.3" }
