[package]
name = "bdk_esplora_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# BDK Core
bdk_chain = { path = "../bdk_chain", features = ["serde", "miniscript", "file_store"] }
bdk_cli = { path = "../bdk_cli_lib" }
serde = { version = "1", features = ["derive"] }
esplora-client = { git = "https://github.com/rajarshimaitra/rust-esplora-client.git", branch = "get_recent_blocks"}

[dev-dependencies]
lazy_static = "1.4.0"
electrsd = { version = "0.22.0", features = ["legacy", "esplora_a33e97e1", "bitcoind_22_0"] }

