[package]
name = "bdk_esplora_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# BDK Core
bdk_chain = { path = "../bdk_chain", features = ["serde", "miniscript", "file_store"] }
bdk_cli = { path = "../bdk_cli_lib" }
serde = { version = "1", features = ["derive"] }
esplora-client = { version = "0.3.0", default-features = false, features = ["blocking"] }

[dev-dependencies]
electrsd = { version = "0.22.0", features = ["legacy", "esplora_a33e97e1", "bitcoind_22_0"] }

