[package]
name = "bdk_esplora_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# BDK Core
bdk_chain = { version = "0.1", features = ["serde", "miniscript", "file_store"] }
bdk_cli = { path = "../bdk_cli_lib" }
bdk_file_store = { path = "../bdk_file_store" }

# Esplora
esplora-client = { git = "https://github.com/rajarshimaitra/rust-esplora-client.git", branch = "get_recent_blocks"}
