[package]
name = "bdk_file_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = {  version = "2.0.0-rc.2", features = ["serde"] }
serde = "1"
bdk_chain = { path = "../bdk_chain", features = ["miniscript"] }
