[package]
name = "bdk_keychain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_core = {  path = "../bdk_core" }
miniscript = { git = "https://github.com/llfourn/rust-miniscript",  rev = "82ba3928cc594a7ddf2710e145862c89f7702bd3" }
serde_crate = { package = "serde", version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }

[features]
default = ["std"]
serde = ["serde_crate", "bdk_core/serde"]
std = ["bdk_core/std"]
