[package]
name = "bdk_rpc_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# BDK Core
bdk_core = { path = "../bdk_core", features = ["serde"] }
bdk_cli = { path = "../bdk_cli_lib"}
bdk_keychain = { path = "../bdk_keychain" }
bdk_file_store = { path = "../bdk_file_store"}

# Electrum
bitcoincore-rpc = "0.16"

# Auxiliary
log = "0.4"
env_logger = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "^1.0" }