[package]
name = "bdk_rpc_wallet_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# BDK Core
bdk_chain = { path = "../bdk_chain", features = ["serde"] }
bdk_cli = { path = "../bdk_cli_lib"}

bitcoincore-rpc = "0.16"

# Auxiliary
serde = { version = "1", features = ["derive"] }
serde_json = { version = "^1.0" }

[dev-dependencies]
electrsd = { version = "0.22", features = ["bitcoind_23_0"]}
env_logger = "0.7"
log = "^0.4"